--- a/bin/view/book/AddNew.fxml
+++ b/bin/view/book/AddNew.fxml
@@ -10,6 +10,48 @@
 
 <Group xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.book.AddBookController">
    <children>
-      
+      <AnchorPane id="AnchorPane" layoutX="10.0" layoutY="10.0" prefHeight="444.0" prefWidth="457.0">
+         <children>
+            <GridPane layoutX="30.0" layoutY="50.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="ISBN" GridPane.columnSpan="2" />                  
+                  <TextField fx:id="txtIsbn" GridPane.columnSpan="4" GridPane.rowIndex="1" />
+                
+                  <Button fx:id="btnSave" mnemonicParsing="false" onAction="#btnSaveOnAction" text="Save" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="11" />
+                  <Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Update" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="11" />
+               </children>
+            </GridPane>
+            <Label fx:id="lblAddBookContent" alignment="CENTER" layoutX="5.0" layoutY="21.0" prefHeight="29.0" prefWidth="448.0" text="CONTENT">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+         </children>
+         <stylesheets>
+            <URL value="@../../style/PopUp.css" />
+            <URL value="@../../style/MainStyle.css" />
+         </stylesheets>
+      </AnchorPane>
+      <Button fx:id="btnClose" layoutX="450.0" layoutY="-3.0" mnemonicParsing="false" onAction="#btnCloseOnAction" prefHeight="30.0" prefWidth="27.0" stylesheets="@../../style/btnOnText.css" />
    </children>
 </Group>
