--- a/src/view/book/ViewAll.fxml
+++ b/src/view/book/ViewAll.fxml
@@ -7,17 +7,17 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" fx:id="acCustomerMainContent" prefHeight="509.0" prefWidth="763.0" stylesheets="/style/MainStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.book.ViewBookController">
+<AnchorPane id="AnchorPane" fx:id="acMainContent" prefHeight="509.0" prefWidth="763.0" stylesheets="/style/MainStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.book.ViewBookController">
 	<children>
 		<BorderPane layoutX="253.0" layoutY="132.0" prefHeight="509.0" prefWidth="763.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<center>
-				<TableView fx:id="tblCustomer" onMouseClicked="#tblCustomerOnClick" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: none;" BorderPane.alignment="CENTER">
+				<TableView fx:id="tblBook" onMouseClicked="#onClickTableBook" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: none;" BorderPane.alignment="CENTER">
 					<columns>
-						<TableColumn fx:id="tblClmName" prefWidth="104.0" text="SSBN" />
-						<TableColumn fx:id="tblClmContNo" prefWidth="185.0" text="Title" />
-						<TableColumn fx:id="tblClmAddres" prefWidth="95.0" text="Author" />
-						<TableColumn fx:id="tblClmDate" prefWidth="123.0" text="Number of copy" />
-						<TableColumn fx:id="tblClmTotalBuy" prefWidth="146.0" text="Other " />
+						<TableColumn fx:id="clmIsbn" prefWidth="104.0" text="SSBN" />
+						<TableColumn fx:id="clmTitle" prefWidth="185.0" text="Title" />
+						<TableColumn fx:id="clmAuthor" prefWidth="95.0" text="Author" />
+						<TableColumn fx:id="clmCopyNumber" prefWidth="123.0" text="Number of Copy" />
+						<TableColumn fx:id="clmCheckoutLength" prefWidth="146.0" text="Check out Length " />
 					</columns>
 					<columnResizePolicy>
 						<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -27,17 +27,17 @@
 			<top>
 				<HBox alignment="CENTER" prefHeight="65.0" prefWidth="763.0" spacing="10.0" BorderPane.alignment="CENTER">
 					<children>
-						<TextField fx:id="txtSearch" onKeyReleased="#tfSearchOnKeyReleased" prefHeight="25.0" prefWidth="603.0" promptText="Search book by SSBN" />
-						<Button fx:id="btnRefresh" mnemonicParsing="false" onAction="#btnRefreshOnAction" prefHeight="32.0" prefWidth="32.0" />
+						<TextField fx:id="txtSearch" onKeyReleased="#onKeyReleasedTextBoxSearch" prefHeight="25.0" prefWidth="603.0" promptText="Search book by SSBN" />
+						<Button fx:id="btnRefresh" mnemonicParsing="false" onAction="#onClickButtonRefresh" prefHeight="32.0" prefWidth="32.0" />
 					</children>
 				</HBox>
 			</top>
 			<bottom>
 				<HBox alignment="CENTER_RIGHT" prefHeight="69.0" prefWidth="763.0" spacing="10.0" BorderPane.alignment="CENTER">
 					<children>
-						<Button fx:id="btnAdd" mnemonicParsing="false" onAction="#btnAddOnAction" text="Add New" />
-						<Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#btnUpdateOnAction" text="Copy" />
-						<Button fx:id="btnDelete" mnemonicParsing="false" onAction="#btnDeleteOnAction" text="Checkout" />
+						<Button fx:id="btnAdd" mnemonicParsing="false" onAction="#onClickButtonAdd" text="Add New" />
+						<Button fx:id="btnUpdate" mnemonicParsing="false" onAction="#onClickButtonCopy" text="Copy" />
+						<Button fx:id="btnDelete" mnemonicParsing="false" onAction="#onClickButtonCopy" text="Checkout" />
 					</children>
 					<padding>
 						<Insets right="10.0" />
