--- a/bin/view/Login.fxml
+++ b/bin/view/Login.fxml
@@ -11,23 +11,17 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="apMother" prefHeight="500.0" prefWidth="900.0"
-	stylesheets="@../style/MainStyle.css" xmlns="http://javafx.com/javafx/8"
-	xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
+<AnchorPane fx:id="apMother" prefHeight="500.0" prefWidth="900.0" stylesheets="@../style/MainStyle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
 
 	<children>
-		<HBox alignment="CENTER" prefHeight="535.0" prefWidth="760.0"
-			AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-			AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+		<HBox alignment="CENTER" prefHeight="535.0" prefWidth="760.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<children>
 				<VBox alignment="CENTER" prefHeight="620.0" prefWidth="726.0">
 					<children>
-						<AnchorPane fx:id="apDesignPane" prefHeight="384.0"
-							prefWidth="668.0">
+						<AnchorPane fx:id="apDesignPane" prefHeight="384.0" prefWidth="668.0">
 							<children>
 
-								<AnchorPane layoutX="381.0" layoutY="52.0"
-									prefHeight="280.0" prefWidth="290.0" style="-fx-background-color: white;">
+								<AnchorPane layoutX="381.0" layoutY="52.0" prefHeight="280.0" prefWidth="290.0" style="-fx-background-color: white;">
 									<children>
 										<Label layoutX="80.0" layoutY="14.0" text="SIGN IN">
 											<font>
@@ -35,42 +29,27 @@
 											</font>
 										</Label>
 
-										<GridPane layoutX="5.0" layoutY="83.0" prefHeight="97.0"
-											prefWidth="281.0" vgap="10.0">
+										<GridPane layoutX="5.0" layoutY="83.0" prefHeight="97.0" prefWidth="281.0" vgap="10.0">
 											<columnConstraints>
-												<ColumnConstraints hgrow="SOMETIMES"
-													minWidth="10.0" prefWidth="100.0" />
-												<ColumnConstraints hgrow="SOMETIMES"
-													minWidth="10.0" prefWidth="100.0" />
+												<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+												<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 											</columnConstraints>
 											<rowConstraints>
-												<RowConstraints minHeight="10.0" prefHeight="30.0"
-													vgrow="SOMETIMES" />
-												<RowConstraints minHeight="10.0" prefHeight="30.0"
-													vgrow="SOMETIMES" />
+												<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+												<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 											</rowConstraints>
 											<children>
-												<TextField fx:id="txtUserName" onAction="#onHitEnterUserNameField"
-													promptText="User Name" GridPane.columnSpan="2" />
-												<PasswordField fx:id="pwfUserPassword"
-													onAction="#onHitEnterPasswordField" promptText="Password"
-													GridPane.columnSpan="2" GridPane.rowIndex="1" />
-												<Button fx:id="btnClearUserNameField"
-													mnemonicParsing="false" prefHeight="31.0" prefWidth="29.0"
-													stylesheets="@../style/btnOnText.css" GridPane.columnSpan="2"
-													GridPane.halignment="RIGHT" />
-												<Button fx:id="btnClearPasswordField"
-													mnemonicParsing="false" prefHeight="31.0" prefWidth="29.0"
-													stylesheets="@../style/btnOnText.css" GridPane.columnSpan="2"
-													GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+												<TextField fx:id="txtUserName"  onAction="#onHitEnterUserNameField" promptText="User Name" GridPane.columnSpan="2" />
+												<PasswordField fx:id="pwfUserPassword" onAction="#onHitEnterPasswordField" promptText="Password" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+												<Button fx:id="btnClearUserNameField" mnemonicParsing="false" prefHeight="31.0" prefWidth="29.0" stylesheets="@../style/btnOnText.css" GridPane.columnSpan="2" GridPane.halignment="RIGHT" />
+												<Button fx:id="btnClearPasswordField" mnemonicParsing="false" prefHeight="31.0" prefWidth="29.0" stylesheets="@../style/btnOnText.css" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
 											</children>
 										</GridPane>
-										<Button fx:id="btnLogin" layoutX="96.0" layoutY="203.0"
-											mnemonicParsing="false" onAction="#onClickButtonLogin" text="Log In" />
+										<Button fx:id="btnLogin" layoutX="96.0" layoutY="203.0" mnemonicParsing="false" onAction="#onClickButtonLogin" text="Log In" />
+                              <Label fx:id="lblLoginFailed" visible="false" contentDisplay="CENTER" layoutX="34.0" layoutY="249.0" text="Please check your user name or password." textFill="#f10707" />
 									</children>
 								</AnchorPane>
-								<ImageView fitHeight="300.0" fitWidth="300.0" layoutX="60.0"
-									layoutY="80.0" pickOnBounds="true" preserveRatio="true">
+								<ImageView fitHeight="300.0" fitWidth="300.0" layoutX="60.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true">
 									<image>
 										<Image url="@../image/library.png" />
 									</image>
