--- a/src/view/book/Checkout.fxml
+++ b/src/view/book/Checkout.fxml
@@ -10,11 +10,11 @@
 
 <Group xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.book.CheckoutController">
 	<children>
-		<AnchorPane id="AnchorPane" layoutX="10.0" layoutY="10.0" prefHeight="410.0" prefWidth="580" stylesheets="/style/PopUp.css">
+		<AnchorPane id="AnchorPane" layoutX="10.0" layoutY="10.0" prefHeight="420.0" prefWidth="580" stylesheets="/style/PopUp.css">
 			<children>
-				<BorderPane prefHeight="400.0" prefWidth="560.0" stylesheets="/style/MainStyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+				<BorderPane prefHeight="410.0" prefWidth="560.0" stylesheets="/style/MainStyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 					<center>
-						<Pane prefHeight="400.0" prefWidth="560.0" BorderPane.alignment="CENTER">
+						<Pane prefHeight="410.0" prefWidth="560.0" BorderPane.alignment="CENTER">
 							<children>
 								<GridPane layoutX="14.0" layoutY="68.0">
 									<columnConstraints>
@@ -47,12 +47,12 @@
 												</MenuItem>
 												<MenuItem mnemonicParsing="false">
 													<graphic>
-														<TableView fx:id="tblMember" onMouseClicked="#onClickTableMember" prefHeight="150.0" prefWidth="250.0">
+														<TableView fx:id="tblMember" onMouseClicked="#onClickTableMember" prefHeight="220.0" prefWidth="250.0">
 															<columnResizePolicy>
 																<TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
 															</columnResizePolicy>
 															<columns>
-																<TableColumn fx:id="clmMemberId" prefWidth="75.0" text="Id" visible="false" />
+																<TableColumn fx:id="clmMemberId" prefWidth="5.0" text="Id" visible="false" />
 																<TableColumn fx:id="clmFirstName" prefWidth="102.0" text="First Name" />
 																<TableColumn fx:id="clmLastName" prefWidth="100.0" text="Last Name" />
 															</columns>
@@ -68,10 +68,10 @@
                           
                               <TableView fx:id="tblCheckoutRecord" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="5" GridPane.rowIndex="4" GridPane.rowSpan="5">
 											<columns>
-												<TableColumn fx:id="clmIsbn" minWidth="80.0" text="ISBN" />
+												<TableColumn fx:id="clmIsbn" minWidth="70.0" prefWidth="70.0" text="ISBN" />
 													<TableColumn fx:id="clmTitle" minWidth="160.0" prefWidth="160.0" text="Title" />
-													<TableColumn fx:id="clmCopyNumber" minWidth="100.0" prefWidth="100.0" text="Copy number" />
-													<TableColumn fx:id="clmDueDate" minWidth="100.0" prefWidth="100.0" text="Due date" />
+													
+													<TableColumn fx:id="clmDueDate" minWidth="80.0" prefWidth="100.0" text="Due date" />
 													<TableColumn fx:id="clmCheckoutDate" maxWidth="120.0" minWidth="100.0" prefWidth="100.0" text="Check out date" />
 												</columns>
 											
