--- a/src/view/book/Copy.fxml
+++ b/src/view/book/Copy.fxml
@@ -55,7 +55,7 @@
 									</rowConstraints>
 									<children>
 										<Label text="ISBN:" GridPane.columnSpan="2" />
-										<Label text="ISBN" GridPane.columnSpan="2"
+										<Label text="Number of Copy:" GridPane.columnSpan="2"
 											GridPane.rowIndex="2" />
 										<TextField fx:id="txtIsbn" disable="true"
 											GridPane.columnSpan="3" GridPane.rowIndex="1" />
